# alexandria

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  rustfmt.toml  setup.sh
alexandria-recl/: Cargo.toml
assets/: logo.aseprite
config/: config.example.ron
migrations/: 20250920145912_init.down.sql  20250920145912_init.up.sql
misc/: 181025_populate.sql
sql/: delete_all.sql  models.sql
src/: app.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  response.rs  responses.rs  run.rs  util.rs
src/api/: health.rs  middleware.rs  mod.rs
src/config/: mod.rs
src/handlers/: file.rs  mod.rs  motivo.rs
src/handlers/entities/: mod.rs  motivo.rs  reclamacao.rs  reclamado.rs  reclamante.rs
src/models/: database.rs  defacto.rs  intern.rs  mod.rs
src/services/: mod.rs  queries.rs
src/services/entities/: mod.rs  motivo.rs  reclamacao.rs
src/services/file/: mod.rs
