[package]
name = "alexandria"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
axum-extra = "0.10.3"
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3.0.0"
readonly = "0.2.13"
ron = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
dotenvy = "0.15.7"
